--- a/index.html
+++ b/index.html
@@ -23,15 +23,26 @@
 </div>
 </section>
 
-</section claass="container secundario">
-    <img src="Plataformas.png" alt="Um monitor é um celular com o Alura Plus Aberto" class="secundario__imagem">
+<section class="container secundario">
+    <img src="Plataformas.png" alt="Um monitor é um celular com o Alura Plus aberto" class="secundario__imagem">
     <div class="container__descricao">
-         <h2 class="descricao__titulo">Assista do seu jeito</h2>
-         <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        <h2 class="descricao__titulo">Assista do seu jeito</h2>
+        <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
     </div>
+</section>
 
-
-
-
-
+    <section class="container secundario">
+    <div class="container__descricao">
+        <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+    <a href="www.alura.com.br"class="container__botao secundario__botao" container>Assinar o Combo+.</a>
     </div>
+    <img src="Telas.png" alt="Tela da Alura Plus e Alura Língua" class="secundario__imagem">
+    </section>
+
+    <section class="container secundario">
+        <img src="Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+        </div>
+    </section>
